// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Action Buttons renders correctly -- default look 1`] = `
<div>
  <div
    class="ui small buttons"
  >
    <button
      class="ui basic compact icon button"
      data-testid="copy-file-id"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
    </button>
    <a
      class="ui basic compact icon button"
      data-testid="download-file"
      href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
      role="button"
    >
      <i
        aria-hidden="true"
        class="download icon"
      />
    </a>
    <button
      class="ui basic compact icon button"
      data-testid="delete-button"
    >
      <i
        aria-hidden="true"
        class="trash alternate icon"
      />
    </button>
  </div>
</div>
`;

exports[`File Action Buttons renders correctly -- default look 2`] = `
<div>
  <div
    class="ui small buttons"
  >
    <button
      class="ui basic compact icon button"
      data-testid="copy-file-id"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
    </button>
    <a
      class="ui basic compact icon button"
      data-testid="download-file"
      href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
      role="button"
    >
      <i
        aria-hidden="true"
        class="download icon"
      />
    </a>
    <button
      class="ui basic compact icon button"
      data-testid="delete-button"
    >
      <i
        aria-hidden="true"
        class="trash alternate icon"
      />
    </button>
  </div>
</div>
`;

exports[`File Action Buttons renders correctly -- default look 3`] = `
<div>
  <div
    class="ui small buttons"
  >
    <button
      class="ui basic compact icon button"
      data-testid="copy-file-id"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
    </button>
    <a
      class="ui basic compact icon button"
      data-testid="download-file"
      href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
      role="button"
    >
      <i
        aria-hidden="true"
        class="download icon"
      />
    </a>
    <button
      class="ui basic compact icon button"
      data-testid="delete-button"
    >
      <i
        aria-hidden="true"
        class="trash alternate icon"
      />
    </button>
  </div>
</div>
`;

exports[`File Action Buttons renders correctly -- fluid look 1`] = `
<div>
  <div
    class="ui small fluid buttons"
  >
    <button
      class="ui basic compact icon button"
      data-testid="copy-file-id"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
    </button>
    <a
      class="ui basic compact icon button"
      data-testid="download-file"
      href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
      role="button"
    >
      <i
        aria-hidden="true"
        class="download icon"
      />
    </a>
    <button
      class="ui basic compact icon button"
      data-testid="delete-button"
    >
      <i
        aria-hidden="true"
        class="trash alternate icon"
      />
    </button>
  </div>
</div>
`;

exports[`File Action Buttons renders correctly -- vertical look 1`] = `
<div>
  <div
    class="ui small buttons"
  >
    <button
      class="ui basic compact icon button"
      data-testid="copy-file-id"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
    </button>
    <a
      class="ui basic compact icon button"
      data-testid="download-file"
      href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
      role="button"
    >
      <i
        aria-hidden="true"
        class="download icon"
      />
    </a>
    <button
      class="ui basic compact icon button"
      data-testid="delete-button"
    >
      <i
        aria-hidden="true"
        class="trash alternate icon"
      />
    </button>
  </div>
</div>
`;
